# MIPT_CPP

./: .clang-format  .gitignore  CMakeLists.txt  dox_config  output.txt
Projects/Nim/: main.cpp
Projects/Vector/: CMakeLists.txt  debug_log.txt  main.cpp  output.txt  vector.cpp  vector.h
SeminarsWork/class1/: fibonacci.cpp
SeminarsWork/class10/fractals/: CMakeLists.txt  main.cpp
SeminarsWork/class11/canvas/: CMakeLists.txt  main.cpp
SeminarsWork/class12/hexagon/: CMakeLists.txt  main.cpp
SeminarsWork/class13/logic_gate/: CMakeLists.txt  main.cpp
SeminarsWork/class14/least_squares/: CMakeLists.txt  least_squares.cpp  least_squares.h  main.cpp
SeminarsWork/class15/board/: CMakeLists.txt  board.cpp  board.h  cell.cpp  cell.h  checker.cpp  checker.h  main.cpp
SeminarsWork/class16/: find_subsequence.cpp  merge_sort.cpp
SeminarsWork/class17/: lets_exhaust_memory.cpp
SeminarsWork/class2/: input.txt  least_squares.cpp  points.cpp
SeminarsWork/class3/: fast_pow.cpp
SeminarsWork/class4/: calculator02.cpp
SeminarsWork/class5/: english_grammar.cpp  test.txt
SeminarsWork/class5/calculator/: test.txt  (+9 more)
SeminarsWork/class7/: ElementLine.cpp  text.txt
SeminarsWork/class8/: different_systems.cpp  reverse_files.cpp
class 1/: fib.cpp  hello.cpp
class1/: fib.cpp  fibonacci.cpp  hello.cpp
class2/: least_squares.cpp
class3/: fast_pow.cpp
class4/: calculator02.cpp
class5/: calculator08buggy.cpp  test.txt
lib/Graph_lib/: Graph.cpp  Graph.h
lib/polygon/: poly.cpp  poly.h
lib/tracer/: tracer.cpp  tracer.h
lib/vector2d/: vector2d.cpp  vector2d.h
(+11 files in other folders)
